Added banner images to the blog posts

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,6 +18,8 @@
   <main class="wrapper">
     {{ partial "header.html" . }}
 
+    {{ partial "featured-image.html" .}}
+
     <div class="content">
       {{ block "content" . }}{{ end }}
     </div>
