--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -279,3 +279,13 @@ figure {
 .fas {
   font-weight: 900;
 }
+
+.banner-img {
+  max-height: 600px;
+  width: 100% !important;
+  -webkit-filter: drop-shadow(0px 16px 10px rgba(0,0,0,0.2));
+  -moz-filter: drop-shadow(0px 16px 10px rgba(0,0,0,0.2));
+  -ms-filter: drop-shadow(0px 16px 10px rgba(0,0,0,0.2)); 
+  -o-filter: drop-shadow(0px 16px 10px rgba(0,0,0,0.2));
+  filter: drop-shadow(0px 16px 10px rgba(0,0,0,0.2));
+}
