--- a/layouts/partials/head/meta-tags.html
+++ b/layouts/partials/head/meta-tags.html
@@ -12,9 +12,7 @@
 <meta name="keywords" content="{{ (delimit .Keywords ", ") | default .Site.Params.keywords }}">
 <meta name="fediverse:creator" content="{{ .Params.fediverseCreator }}" />
 
-{{ if .Params.featuredImage }}
-    <meta name="og:image" content="{{ .Params.featuredImage | absURL }}">
-{{ end }}
+<meta name="og:image" content="{{ .Params.featuredImage | default "/images/blog-image-of-universe.jpg" | absURL }}">
 
 {{ template "_internal/twitter_cards.html" . }}
 {{ template "_internal/opengraph.html" . }}
