--- a/layouts/partials/head/meta-tags.html
+++ b/layouts/partials/head/meta-tags.html
@@ -15,4 +15,4 @@
 {{ template "_internal/twitter_cards.html" . }}
 
 {{ template "_internal/opengraph.html" . }}
-<meta name="og:image" content="{{ .Params.featuredImage | default .Site.Params.featuredImage | absURL }}">
+<meta property="og:image" content="{{ .Params.featuredImage | default .Site.Params.featuredImage | absURL }}">
