--- a/layouts/partials/head/meta-tags.html
+++ b/layouts/partials/head/meta-tags.html
@@ -13,6 +13,8 @@
 <meta name="fediverse:creator" content="{{ .Params.fediverseCreator }}" />
 
 {{ template "_internal/twitter_cards.html" . }}
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:image" content="{{ .Params.featuredImage | default .Site.Params.featuredImage | absURL }}">
 
 {{ template "_internal/opengraph.html" . }}
 <meta property="og:image" content="{{ .Params.featuredImage | default .Site.Params.featuredImage | absURL }}">
