--- a/layouts/partials/head/meta-tags.html
+++ b/layouts/partials/head/meta-tags.html
@@ -12,8 +12,9 @@
 <meta name="keywords" content="{{ (delimit .Keywords ", ") | default .Site.Params.keywords }}">
 <meta name="fediverse:creator" content="{{ .Params.fediverseCreator }}" />
 
-{{ template "_internal/twitter_cards.html" . }}
 <meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="{{ .Title }}">
+<meta property="twitter:description" content="{{ .Params.description | default .Site.Params.description }}">
 <meta property="twitter:image" content="{{ .Params.featuredImage | default .Site.Params.featuredImage | absURL }}">
 
 {{ template "_internal/opengraph.html" . }}
